2011-10-14  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/50723
	* ipa-split.c (split_function): Use GSI_CONTINUE_LINKING.

2011-10-14  Nicola Pero  <nicola.pero@meta-innovation.com>

	* gengtype.c (files_rules): Added rules for objc/objc-map.h and
	objc/objc-map.c.

2011-10-14  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/17212
	* c-family/c.opt ([Wformat-zero-length]): Add C++ and Objective-C++.
	* doc/invoke.texi: Update.

2011-10-14  Iain Sandoe  <iains@gcc.gnu.org>

	PR bootstrap/50699
	* config/darwin.c (darwin_patch_builtin): Adjust argument type. Only
	build for powerpc targets.  (darwin_patch_builtins): Only build for
	powerpc targets.

2011-10-14  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/sse.md (*avx_cvtdq2pd256_2): Rename to...
	(avx_cvtdq2pd256_2): ... this.
	(sseunpackfltmode): New mode attr.
	(vec_unpacks_float_hi_v8hi, vec_unpacks_float_lo_v8hi,
	vec_unpacku_float_hi_v8hi, vec_unpacku_float_lo_v8hi): Macroize
	using VI2_AVX2 iterator.
	(vec_unpacku_float_hi_v8si, vec_unpacku_float_lo_v8si): New
	expanders.

2011-10-13  David S. Miller  <davem@davemloft.net>

	* config/sparc/sparc.md (plusminus): New code iterator.
	(plusminus_insn): New code attr.
	(addv2si3, subv2si3, addv4hi3, subv4hi3, addv2hi3, subv2hi3): Merge
	using plusminus and plusminus_insn.
	(fpadd64_vis, fpsub64_vis): Likewise.

2011-10-13  Richard Henderson  <rth@redhat.com>

	* doc/md.texi (vec_perm): Document fallback to byte permutation.
	* genopinit.c (optabs): Add vec_perm_const.
	* optabs.c (can_vec_perm_expr_p): Rename from expand_vec_perm_expr_p.
	Reject non-vector modes.  Allow fallback to byte permutation.
	(expand_vec_perm_expr_1): Split out from ...
	(expand_vec_perm_expr): ... here.  Allow fallback to byte permutation.
	* optabs.h (DOI_vec_perm_const, vec_perm_const_optab): New.
	* tree-vect-generic.c (lower_vec_perm): Update for name change.

2011-10-13  Richard Henderson  <rth@redhat.com>
